--- a/package.json
+++ b/package.json
@@ -9,12 +9,25 @@
     "android-studio": "studio",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "test": "jest --watchAll",
+    "test": "jest --watchAll --coverage=false",
+    "test-coverage": "jest --coverage=true",
+    "test-final": "jest --coverage=false",
     "lint": "expo lint",
     "prepare": "husky"
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "jest-expo",
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "**/*.{ts,tsx,js,jsx}",
+      "!**/coverage/**",
+      "!**/node_modules/**",
+      "!**/babel.config.js",
+      "!**/expo-env.d.ts",
+      "!**/.expo/**",
+      "!**/.husky/**",
+      "!**/.eslintrc.js"
+    ]
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
@@ -46,9 +59,9 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@realm/babel-plugin": "^0.2.0",
+    "@testing-library/react-native": "^12.7.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
-    "@types/react-test-renderer": "^18.0.7",
     "eslint": "^8.57.0",
     "eslint-config-expo": "^7.1.2",
     "eslint-config-prettier": "^9.1.0",
@@ -57,7 +70,6 @@
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "prettier": "^3.3.3",
-    "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
   "private": true
