--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -12,12 +12,12 @@ jobs:
       node-version: 22.9.0
     steps:
       - name: Checking out the repository
-      - uses: actions/checkout@v4
-      - name: Using Node.js $node-version
-      - uses: actions/setup-node@v4
+        uses: actions/checkout@v4
+      - name: Using Node.js ${{ env.node-version }}
+        uses: actions/setup-node@v4
         with:
-          node-version: $node-version
+          node-version: ${{ env.node-version }}
       - name: Installing node modules
-      - run: npm ci
+        run: npm ci
       - name: Running the tests
-      - run: npm run test-final  
+        run: npm run test-final  
