--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-firebase/app": "^21.0.0",
     "@react-navigation/native": "^6.0.2",
     "@realm/react": "^0.11.0",
     "date-fns": "^4.1.0",
     "expo": "^51.0.36",
     "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.28",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
@@ -54,7 +56,8 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "realm": "^20.0.0"
+    "realm": "^20.0.0",
+    "expo-build-properties": "~0.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
