--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "test-coverage": "jest --coverage=true",
     "test-final": "jest --coverage=false",
     "lint": "expo lint",
-    "prepare": "husky"
+    "prepare": "husky",
+    "storybook-generate": "sb-rn-get-stories",
+    "storybook": "STORYBOOK_ENABLED='true' expo start",
+    "storybook:android": "STORYBOOK_ENABLED='true' expo run:android",
+    "storybook:ios": "STORYBOOK_ENABLED='true' expo run:ios"
   },
   "jest": {
     "preset": "jest-expo",
@@ -36,6 +40,7 @@
     "@realm/react": "^0.11.0",
     "date-fns": "^4.1.0",
     "expo": "^51.0.36",
+    "expo-build-properties": "~0.12.5",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.28",
     "expo-font": "~12.0.9",
@@ -56,15 +61,24 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "realm": "^20.0.0",
-    "expo-build-properties": "~0.12.5"
+    "realm": "^20.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@gorhom/bottom-sheet": "^5.0.1",
+    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-community/slider": "^4.5.3",
     "@realm/babel-plugin": "^0.2.0",
+    "@shopify/flash-list": "^1.7.1",
+    "@storybook/addon-ondevice-actions": "^8.3.6",
+    "@storybook/addon-ondevice-controls": "^8.3.6",
+    "@storybook/react": "^8.3.5",
+    "@storybook/react-native": "^8.3.6",
     "@testing-library/react-native": "^12.7.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "babel-loader": "^8.4.1",
     "eslint": "^8.57.0",
     "eslint-config-expo": "^7.1.2",
     "eslint-config-prettier": "^9.1.0",
@@ -73,6 +87,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "prettier": "^3.3.3",
+    "react-native-svg": "^15.7.1",
     "typescript": "~5.3.3"
   },
   "private": true
