--- a/package.json
+++ b/package.json
@@ -2,37 +2,6 @@
   "name": "dear-universe-app",
   "main": "expo-router/entry",
   "version": "1.0.0",
-  "scripts": {
-    "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo run:android",
-    "android-studio": "studio",
-    "ios": "expo run:ios",
-    "web": "expo start --web",
-    "test": "jest --watchAll --coverage=false",
-    "test-coverage": "jest --coverage=true",
-    "test-final": "jest --coverage=false",
-    "lint": "expo lint",
-    "prepare": "husky",
-    "storybook-generate": "sb-rn-get-stories",
-    "storybook": "STORYBOOK_ENABLED='true' expo start",
-    "storybook:android": "STORYBOOK_ENABLED='true' expo run:android",
-    "storybook:ios": "STORYBOOK_ENABLED='true' expo run:ios"
-  },
-  "jest": {
-    "preset": "jest-expo",
-    "collectCoverage": true,
-    "collectCoverageFrom": [
-      "**/*.{ts,tsx,js,jsx}",
-      "!**/coverage/**",
-      "!**/node_modules/**",
-      "!**/babel.config.js",
-      "!**/expo-env.d.ts",
-      "!**/.expo/**",
-      "!**/.husky/**",
-      "!**/.eslintrc.js"
-    ]
-  },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-firebase/app": "^21.0.0",
@@ -68,13 +37,13 @@
     "@gorhom/bottom-sheet": "^5.0.1",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/datetimepicker": "^8.2.0",
-    "@react-native-community/slider": "^4.5.3",
+    "@react-native-community/slider": "^4.5.4",
     "@realm/babel-plugin": "^0.2.0",
     "@shopify/flash-list": "^1.7.1",
-    "@storybook/addon-ondevice-actions": "^8.3.6",
-    "@storybook/addon-ondevice-controls": "^8.3.6",
+    "@storybook/addon-ondevice-actions": "^8.3.8",
+    "@storybook/addon-ondevice-controls": "^8.3.8",
     "@storybook/react": "^8.3.5",
-    "@storybook/react-native": "^8.3.6",
+    "@storybook/react-native": "^8.3.8",
     "@testing-library/react-native": "^12.7.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
@@ -83,12 +52,32 @@
     "eslint-config-expo": "^7.1.2",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-testing-library": "^6.3.0",
     "husky": "^9.1.6",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "prettier": "^3.3.3",
     "react-native-svg": "^15.7.1",
+    "react-test-renderer": "^18.2.0",
+    "ts-node": "^10.9.2",
     "typescript": "~5.3.3"
   },
-  "private": true
+  "private": true,
+  "scripts": {
+    "start": "expo start",
+    "reset-project": "node ./scripts/reset-project.js",
+    "android": "expo run:android",
+    "android-studio": "studio",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "test": "jest --watchAll --coverage=false",
+    "test-coverage": "jest --coverage=true",
+    "test-final": "jest --coverage=false",
+    "lint": "expo lint",
+    "prepare": "husky",
+    "storybook-generate": "sb-rn-get-stories",
+    "storybook": "STORYBOOK_ENABLED='true' expo start",
+    "storybook:android": "STORYBOOK_ENABLED='true' expo run:android",
+    "storybook:ios": "STORYBOOK_ENABLED='true' expo run:ios"
+  }
 }
