--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "version": "1.0.0",
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-community/slider": "4.5.2",
     "@react-native-firebase/app": "^21.0.0",
     "@react-navigation/native": "^6.0.2",
     "@realm/react": "^0.11.0",
     "date-fns": "^4.1.0",
     "expo": "^51.0.36",
+    "expo-av": "~14.0.7",
     "expo-build-properties": "~0.12.5",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.28",
