--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "realm": "^20.0.0"
+    "realm": "^20.0.0",
+    "expo-image": "~1.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
