--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.28",
     "expo-font": "~12.0.10",
+    "expo-image": "~1.13.0",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
@@ -32,8 +33,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "realm": "^20.0.0",
-    "expo-image": "~1.13.0"
+    "realm": "^20.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -45,6 +45,7 @@
     "@shopify/flash-list": "^1.7.1",
     "@storybook/addon-ondevice-actions": "^8.3.8",
     "@storybook/addon-ondevice-controls": "^8.3.8",
+    "@storybook/preview-api": "^8.3.6",
     "@storybook/react": "^8.3.5",
     "@storybook/react-native": "^8.3.8",
     "@testing-library/react-native": "^12.7.2",
