--- a/ios/Dearuniverse/Info.plist
+++ b/ios/Dearuniverse/Info.plist
@@ -57,8 +57,8 @@
     </array>
     <key>UIAppFonts</key>
     <array>
-      <string>AlegreyaSansSC-Regular.ttf</string>
-      <string>BalooPaaji2-Regular.ttf</string>
+      <string>Nunito-Regular.ttf</string>
+      <string>PTSans-Regular.ttf</string>
     </array>
     <key>UILaunchStoryboardName</key>
     <string>SplashScreen</string>
