--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.28",
     "expo-font": "~12.0.10",
+    "expo-image": "~1.13.0",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
@@ -25,6 +26,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-gallery-preview": "^1.3.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-get-random-values": "^1.11.0",
     "react-native-paper": "^5.12.5",
@@ -44,6 +46,7 @@
     "@shopify/flash-list": "^1.7.1",
     "@storybook/addon-ondevice-actions": "^8.3.8",
     "@storybook/addon-ondevice-controls": "^8.3.8",
+    "@storybook/preview-api": "^8.3.6",
     "@storybook/react": "^8.3.5",
     "@storybook/react-native": "^8.3.8",
     "@testing-library/react-native": "^12.7.2",
