feat: microphone permission message, refactoring

--- a/ios/Dearuniverse/Info.plist
+++ b/ios/Dearuniverse/Info.plist
@@ -50,7 +50,7 @@
       <true/>
     </dict>
     <key>NSMicrophoneUsageDescription</key>
-    <string>Allow $(PRODUCT_NAME) to access your microphone</string>
+    <string>Microphone is needed to record an entry.</string>
     <key>NSUserActivityTypes</key>
     <array>
       <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
