--- a/package.json
+++ b/package.json
@@ -3,70 +3,70 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "14.0.2",
     "@react-native-community/slider": "4.5.2",
-    "@react-native-firebase/app": "^21.0.0",
-    "@react-navigation/native": "^6.0.2",
-    "@realm/react": "^0.11.0",
-    "date-fns": "^4.1.0",
-    "expo": "^51.0.36",
-    "expo-av": "~14.0.7",
-    "expo-build-properties": "~0.12.5",
-    "expo-constants": "~16.0.2",
-    "expo-dev-client": "~4.0.28",
-    "expo-font": "~12.0.10",
-    "expo-image": "~1.13.0",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.23",
-    "expo-splash-screen": "~0.27.5",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-web-browser": "~13.0.3",
-    "lodash": "^4.17.21",
+    "@react-native-firebase/app": "21.0.0",
+    "@react-navigation/native": "6.0.2",
+    "@realm/react": "0.11.0",
+    "date-fns": "4.1.0",
+    "expo": "51.0.36",
+    "expo-av": "14.0.7",
+    "expo-build-properties": "0.12.5",
+    "expo-constants": "16.0.2",
+    "expo-dev-client": "4.0.28",
+    "expo-font": "12.0.10",
+    "expo-image": "1.13.0",
+    "expo-linking": "6.3.1",
+    "expo-router": "3.5.23",
+    "expo-splash-screen": "0.27.5",
+    "expo-status-bar": "1.12.1",
+    "expo-system-ui": "3.0.7",
+    "expo-web-browser": "13.0.3",
+    "lodash": "4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-gallery-preview": "^1.3.2",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-get-random-values": "^1.11.0",
-    "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "~3.10.1",
+    "react-native-gallery-preview": "1.3.2",
+    "react-native-gesture-handler": "2.16.1",
+    "react-native-get-random-values": "1.11.0",
+    "react-native-paper": "5.12.5",
+    "react-native-reanimated": "3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "realm": "^20.0.0"
+    "react-native-web": "0.19.10",
+    "realm": "20.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@gorhom/bottom-sheet": "^5.0.5",
-    "@react-native-async-storage/async-storage": "^2.0.0",
-    "@react-native-community/datetimepicker": "^8.2.0",
-    "@react-native-community/slider": "^4.5.4",
-    "@realm/babel-plugin": "^0.2.0",
-    "@shopify/flash-list": "^1.7.1",
-    "@storybook/addon-ondevice-actions": "^8.3.8",
-    "@storybook/addon-ondevice-controls": "^8.3.8",
-    "@storybook/preview-api": "^8.3.6",
-    "@storybook/react": "^8.3.5",
-    "@storybook/react-native": "^8.3.8",
-    "@testing-library/react-native": "^12.7.2",
-    "@types/jest": "^29.5.12",
-    "@types/lodash": "^4.17.13",
-    "@types/react": "~18.2.45",
-    "babel-loader": "^8.4.1",
-    "eslint": "^8.57.0",
-    "eslint-config-expo": "^7.1.2",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-testing-library": "^6.3.0",
-    "husky": "^9.1.6",
-    "jest": "^29.2.1",
-    "jest-expo": "~51.0.3",
-    "prettier": "^3.3.3",
-    "react-native-svg": "^15.7.1",
-    "react-test-renderer": "^18.2.0",
-    "ts-node": "^10.9.2",
-    "typescript": "~5.3.3"
+    "@babel/core": "7.26.0",
+    "@gorhom/bottom-sheet": "5.0.5",
+    "@react-native-async-storage/async-storage": "2.0.0",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-community/slider": "4.5.4",
+    "@realm/babel-plugin": "0.2.0",
+    "@shopify/flash-list": "1.7.1",
+    "@storybook/addon-ondevice-actions": "8.3.8",
+    "@storybook/addon-ondevice-controls": "8.3.8",
+    "@storybook/preview-api": "8.3.6",
+    "@storybook/react": "8.3.5",
+    "@storybook/react-native": "8.3.8",
+    "@testing-library/react-native": "12.7.2",
+    "@types/jest": "29.5.12",
+    "@types/lodash": "4.17.13",
+    "@types/react": "18.2.45",
+    "babel-loader": "8.4.1",
+    "eslint": "8.57.0",
+    "eslint-config-expo": "7.1.2",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.2.1",
+    "eslint-plugin-testing-library": "6.3.0",
+    "husky": "9.1.6",
+    "jest": "29.2.1",
+    "jest-expo": "51.0.3",
+    "prettier": "3.3.3",
+    "react-native-svg": "15.7.1",
+    "react-test-renderer": "18.2.0",
+    "ts-node": "10.9.2",
+    "typescript": "5.3.3"
   },
   "private": true,
   "scripts": {
