--- a/ios/Dearuniverse.xcodeproj/xcshareddata/xcschemes/Dearuniverse.xcscheme
+++ b/ios/Dearuniverse.xcodeproj/xcshareddata/xcschemes/Dearuniverse.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "Dearuniverse.app"
-               BlueprintName = "Dearuniverse"
+               BuildableName = "HelloWorld.app"
+               BlueprintName = "HelloWorld"
                ReferencedContainer = "container:Dearuniverse.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -55,8 +55,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Dearuniverse.app"
-            BlueprintName = "Dearuniverse"
+            BuildableName = "HelloWorld.app"
+            BlueprintName = "HelloWorld"
             ReferencedContainer = "container:Dearuniverse.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -72,8 +72,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Dearuniverse.app"
-            BlueprintName = "Dearuniverse"
+            BuildableName = "HelloWorld.app"
+            BlueprintName = "HelloWorld"
             ReferencedContainer = "container:Dearuniverse.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
