chore: image-picker library

--- a/ios/Dearuniverse/Info.plist
+++ b/ios/Dearuniverse/Info.plist
@@ -49,8 +49,12 @@
       <key>NSAllowsLocalNetworking</key>
       <true/>
     </dict>
+    <key>NSCameraUsageDescription</key>
+    <string>The app needs access to your camera in order to take photos for your entry.</string>
     <key>NSMicrophoneUsageDescription</key>
-    <string>Microphone is needed to record an entry.</string>
+    <string>The app needs access to your microphone in order to record audio for your entry.</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>The app needs access to your photos in order to add photos to your entry.</string>
     <key>NSUserActivityTypes</key>
     <array>
       <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
