--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-native-screens": "3.31.1",
     "react-native-web": "0.19.10",
     "realm": "20.0.0",
-    "expo-file-system": "~17.0.1"
+    "expo-file-system": "~17.0.1",
+    "expo-image-picker": "~15.0.7"
   },
   "devDependencies": {
     "@babel/core": "7.26.0",
