--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-native-web": "0.19.10",
     "realm": "20.0.0",
     "expo-file-system": "~17.0.1",
-    "expo-image-picker": "~15.0.7"
+    "expo-image-picker": "~15.0.7",
+    "expo-screen-orientation": "~7.0.5"
   },
   "devDependencies": {
     "@babel/core": "7.26.0",
