--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "expo-build-properties": "0.12.5",
     "expo-constants": "16.0.2",
     "expo-dev-client": "4.0.28",
+    "expo-file-system": "~17.0.1",
     "expo-font": "12.0.10",
     "expo-image": "1.13.0",
+    "expo-image-picker": "~15.0.7",
     "expo-linking": "6.3.1",
     "expo-router": "3.5.23",
+    "expo-screen-orientation": "~7.0.5",
     "expo-splash-screen": "0.27.5",
     "expo-status-bar": "1.12.1",
     "expo-system-ui": "3.0.7",
+    "expo-video-thumbnails": "~8.0.0",
     "expo-web-browser": "13.0.3",
     "lodash": "4.17.21",
     "react": "18.2.0",
@@ -35,10 +39,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "0.19.10",
-    "realm": "20.0.0",
-    "expo-file-system": "~17.0.1",
-    "expo-image-picker": "~15.0.7",
-    "expo-screen-orientation": "~7.0.5"
+    "realm": "20.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.26.0",
