--- a/ios/Dearuniverse/Info.plist
+++ b/ios/Dearuniverse/Info.plist
@@ -42,6 +42,8 @@
     <string>1</string>
     <key>EXDefaultScreenOrientationMask</key>
     <string>UIInterfaceOrientationMaskPortrait</string>
+    <key>LSMinimumSystemVersion</key>
+    <string>12.0</string>
     <key>LSRequiresIPhoneOS</key>
     <true/>
     <key>NSAppTransportSecurity</key>
@@ -65,6 +67,10 @@
     <array>
       <string>Nunito-Regular.ttf</string>
       <string>PTSans-Regular.ttf</string>
+    </array>
+    <key>UIBackgroundModes</key>
+    <array>
+      <string>audio</string>
     </array>
     <key>UILaunchStoryboardName</key>
     <string>SplashScreen</string>
