--- a/package.json
+++ b/package.json
@@ -9,44 +9,46 @@
     "@react-navigation/native": "6.0.2",
     "@realm/react": "0.11.0",
     "date-fns": "4.1.0",
-    "expo": "51.0.36",
-    "expo-av": "14.0.7",
-    "expo-build-properties": "0.12.5",
-    "expo-constants": "16.0.2",
-    "expo-dev-client": "4.0.28",
-    "expo-file-system": "~17.0.1",
-    "expo-font": "12.0.10",
-    "expo-image": "1.13.0",
-    "expo-image-picker": "~15.0.7",
-    "expo-linking": "6.3.1",
-    "expo-router": "3.5.23",
-    "expo-screen-orientation": "~7.0.5",
-    "expo-splash-screen": "0.27.5",
-    "expo-status-bar": "1.12.1",
-    "expo-system-ui": "3.0.7",
-    "expo-video-thumbnails": "~8.0.0",
-    "expo-web-browser": "13.0.3",
+    "expo": "^52.0.23",
+    "expo-av": "~15.0.1",
+    "expo-build-properties": "~0.13.1",
+    "expo-constants": "~17.0.3",
+    "expo-dev-client": "~5.0.7",
+    "expo-file-system": "~18.0.6",
+    "expo-font": "~13.0.2",
+    "expo-image": "~2.0.3",
+    "expo-image-picker": "~16.0.3",
+    "expo-linking": "~7.0.3",
+    "expo-router": "~4.0.15",
+    "expo-screen-orientation": "~8.0.2",
+    "expo-splash-screen": "~0.29.18",
+    "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.6",
+    "expo-video-thumbnails": "~9.0.2",
+    "expo-web-browser": "~14.0.1",
     "lodash": "4.17.21",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.5",
     "react-native-gallery-preview": "1.3.2",
-    "react-native-gesture-handler": "2.16.1",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "1.11.0",
     "react-native-paper": "5.12.5",
     "react-native-paper-dates": "^0.22.27",
-    "react-native-reanimated": "3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-web": "0.19.10",
-    "realm": "20.0.0"
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-web": "~0.19.13",
+    "realm": "^20.1.0",
+    "expo-video": "~2.0.3"
   },
   "devDependencies": {
     "@babel/core": "7.26.0",
     "@gorhom/bottom-sheet": "5.0.5",
-    "@react-native-async-storage/async-storage": "2.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/cli": "^15.1.3",
     "@react-native-community/datetimepicker": "8.2.0",
-    "@react-native-community/slider": "4.5.4",
+    "@react-native-community/slider": "4.5.5",
     "@realm/babel-plugin": "0.2.0",
     "@shopify/flash-list": "1.7.1",
     "@storybook/addon-ondevice-actions": "8.3.8",
@@ -57,18 +59,18 @@
     "@testing-library/react-native": "12.7.2",
     "@types/jest": "29.5.12",
     "@types/lodash": "4.17.13",
-    "@types/react": "18.2.45",
+    "@types/react": "~18.3.12",
     "babel-loader": "8.4.1",
     "eslint": "8.57.0",
-    "eslint-config-expo": "7.1.2",
+    "eslint-config-expo": "~8.0.1",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.2.1",
     "eslint-plugin-testing-library": "6.3.0",
     "husky": "9.1.6",
-    "jest": "29.2.1",
-    "jest-expo": "51.0.3",
+    "jest": "~29.7.0",
+    "jest-expo": "~52.0.2",
     "prettier": "3.3.3",
-    "react-native-svg": "15.7.1",
+    "react-native-svg": "15.8.0",
     "react-test-renderer": "18.2.0",
     "ts-node": "10.9.2",
     "typescript": "5.3.3"
