--- a/package.json
+++ b/package.json
@@ -6,22 +6,22 @@
     "@expo/vector-icons": "14.0.2",
     "@react-native-community/slider": "4.5.2",
     "@react-native-firebase/app": "21.0.0",
-    "@react-navigation/native": "6.0.2",
+    "@react-navigation/native": "^7.0.14",
     "@realm/react": "0.11.0",
     "date-fns": "4.1.0",
-    "expo": "^52.0.23",
+    "expo": "~52.0.24",
     "expo-av": "~15.0.1",
     "expo-build-properties": "~0.13.1",
     "expo-constants": "~17.0.3",
-    "expo-dev-client": "~5.0.7",
+    "expo-dev-client": "~5.0.8",
     "expo-file-system": "~18.0.6",
     "expo-font": "~13.0.2",
     "expo-image": "~2.0.3",
     "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.15",
-    "expo-screen-orientation": "~8.0.2",
-    "expo-splash-screen": "~0.29.18",
+    "expo-router": "~4.0.16",
+    "expo-screen-orientation": "~8.0.3",
+    "expo-splash-screen": "~0.29.19",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.6",
     "expo-video-thumbnails": "~9.0.2",
@@ -40,7 +40,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "realm": "^20.1.0",
-    "expo-video": "~2.0.3"
+    "expo-video": "~2.0.4"
   },
   "devDependencies": {
     "@babel/core": "7.26.0",
