--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "dependencies": {
     "@expo/vector-icons": "14.0.2",
+    "@likashefqet/react-native-image-zoom": "^4.3.0",
     "@react-native-community/slider": "4.5.2",
     "@react-native-firebase/app": "21.0.0",
     "@react-navigation/native": "^7.0.14",
@@ -20,17 +21,15 @@
     "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.16",
-    "expo-screen-orientation": "~8.0.3",
     "expo-splash-screen": "~0.29.19",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.6",
+    "expo-video": "~2.0.4",
     "expo-video-thumbnails": "~9.0.2",
-    "expo-web-browser": "~14.0.1",
     "lodash": "4.17.21",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
-    "react-native-gallery-preview": "1.3.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "1.11.0",
     "react-native-paper": "5.12.5",
@@ -38,9 +37,8 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-web": "~0.19.13",
     "realm": "^20.1.0",
-    "expo-video": "~2.0.4"
+    "expo-screen-orientation": "~8.0.4"
   },
   "devDependencies": {
     "@babel/core": "7.26.0",
