--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "dependencies": {
     "@expo/vector-icons": "14.0.2",
+    "@fowusu/calendar-kit": "^1.1.0",
     "@likashefqet/react-native-image-zoom": "^4.3.0",
     "@react-native-community/slider": "4.5.2",
     "@react-native-firebase/app": "21.0.0",
@@ -21,6 +22,7 @@
     "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.16",
+    "expo-screen-orientation": "~8.0.4",
     "expo-splash-screen": "~0.29.19",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.6",
@@ -32,13 +34,11 @@
     "react-native": "0.76.5",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "1.11.0",
-    "react-native-paper": "5.12.5",
-    "react-native-paper-dates": "^0.22.27",
+    "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "realm": "^20.1.0",
-    "expo-screen-orientation": "~8.0.4"
+    "realm": "^20.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.26.0",
@@ -48,7 +48,7 @@
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/slider": "4.5.5",
     "@realm/babel-plugin": "0.2.0",
-    "@shopify/flash-list": "1.7.1",
+    "@shopify/flash-list": "^1.7.1",
     "@storybook/addon-ondevice-actions": "8.3.8",
     "@storybook/addon-ondevice-controls": "8.3.8",
     "@storybook/preview-api": "8.3.6",
