--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-drawer-layout": "^4.1.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "1.11.0",
     "react-native-paper": "^5.13.1",
@@ -43,7 +44,7 @@
   "devDependencies": {
     "@babel/core": "7.26.0",
     "@gorhom/bottom-sheet": "5.0.5",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-community/cli": "^15.1.3",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/slider": "4.5.5",
