--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-image": "~2.0.3",
     "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.3",
+    "expo-local-authentication": "~15.0.2",
     "expo-router": "~4.0.16",
     "expo-screen-orientation": "~8.0.4",
     "expo-splash-screen": "~0.29.19",
@@ -31,7 +32,7 @@
     "lodash": "4.17.21",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "^0.76.6",
     "react-native-drawer-layout": "^4.1.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "1.11.0",
@@ -39,7 +40,8 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "realm": "^20.1.0"
+    "realm": "^20.1.0",
+    "expo-crypto": "~14.0.2"
   },
   "devDependencies": {
     "@babel/core": "7.26.0",
