--- a/ios/Dearuniverse/Info.plist
+++ b/ios/Dearuniverse/Info.plist
@@ -54,11 +54,11 @@
       <true/>
     </dict>
     <key>NSCameraUsageDescription</key>
-    <string>The app needs access to your camera in order to take photos for your entry.</string>
+    <string>The app needs access to your camera in order to take photos/videos for your entry.</string>
     <key>NSFaceIDUsageDescription</key>
     <string>The app needs access to FaceID in order to authenticate you.</string>
     <key>NSMicrophoneUsageDescription</key>
-    <string>The app needs access to your microphone in order to record audio for your entry.</string>
+    <string>The app needs access to your microphone in order to record audio in the videos.</string>
     <key>NSPhotoLibraryUsageDescription</key>
     <string>The app needs access to your media library in order to add photos to your entry.</string>
     <key>NSUserActivityTypes</key>
