--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo-av": "~15.0.1",
     "expo-build-properties": "~0.13.1",
     "expo-constants": "~17.0.3",
+    "expo-crypto": "~14.0.2",
     "expo-dev-client": "~5.0.8",
     "expo-file-system": "~18.0.6",
     "expo-font": "~13.0.2",
@@ -41,7 +42,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "realm": "^20.1.0",
-    "expo-crypto": "~14.0.2"
+    "expo-camera": "~16.0.14"
   },
   "devDependencies": {
     "@babel/core": "7.26.0",
