--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo": "~52.0.24",
     "expo-av": "~15.0.1",
     "expo-build-properties": "~0.13.1",
+    "expo-camera": "~16.0.14",
     "expo-constants": "~17.0.3",
     "expo-crypto": "~14.0.2",
     "expo-dev-client": "~5.0.8",
@@ -23,6 +24,7 @@
     "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.3",
     "expo-local-authentication": "~15.0.2",
+    "expo-notifications": "~0.29.13",
     "expo-router": "~4.0.16",
     "expo-screen-orientation": "~8.0.4",
     "expo-splash-screen": "~0.29.19",
@@ -34,6 +36,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "^0.76.6",
+    "react-native-date-picker": "^5.0.10",
     "react-native-drawer-layout": "^4.1.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "1.11.0",
@@ -41,15 +44,14 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "realm": "^20.1.0",
-    "expo-camera": "~16.0.14"
+    "realm": "^20.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.26.0",
     "@gorhom/bottom-sheet": "5.0.5",
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-community/cli": "^15.1.3",
-    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-community/slider": "4.5.5",
     "@realm/babel-plugin": "0.2.0",
     "@shopify/flash-list": "^1.7.1",
