--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@expo/vector-icons": "14.0.2",
     "@fowusu/calendar-kit": "^1.1.0",
     "@likashefqet/react-native-image-zoom": "^4.3.0",
+    "@mgcrea/react-native-dnd": "^2.5.3",
     "@react-native-community/slider": "4.5.2",
     "@react-native-firebase/app": "21.0.0",
     "@react-navigation/native": "^7.0.14",
