--- a/GoogleService-Info.plist
+++ b/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>243099742671-m2fsuriuhm9cfhjclplechhjaac62qdm.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.243099742671-m2fsuriuhm9cfhjclplechhjaac62qdm</string>
 	<key>API_KEY</key>
 	<string>AIzaSyArS4k0tMNdVQKXXX7a6G8fK2VuA2srxDQ</string>
 	<key>GCM_SENDER_ID</key>
@@ -13,7 +17,7 @@
 	<key>PROJECT_ID</key>
 	<string>dear-universe-app</string>
 	<key>STORAGE_BUCKET</key>
-	<string>dear-universe-app.appspot.com</string>
+	<string>dear-universe-app.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
