--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@likashefqet/react-native-image-zoom": "^4.3.0",
     "@mgcrea/react-native-dnd": "^2.5.3",
     "@react-native-community/slider": "4.5.2",
-    "@react-native-firebase/app": "21.0.0",
+    "@react-native-firebase/analytics": "^21.7.2",
+    "@react-native-firebase/app": "^21.7.2",
+    "@react-native-firebase/auth": "^21.7.2",
+    "@react-native-firebase/crashlytics": "^21.7.2",
     "@react-navigation/native": "^7.0.14",
     "@realm/react": "0.11.0",
     "date-fns": "4.1.0",
