feat: ads setup

--- a/ios/Dearuniverse/Info.plist
+++ b/ios/Dearuniverse/Info.plist
@@ -48,6 +48,10 @@
     <string>1</string>
     <key>EXDefaultScreenOrientationMask</key>
     <string>UIInterfaceOrientationMaskPortrait</string>
+    <key>GADApplicationIdentifier</key>
+    <string>ca-app-pub-3470994410920852~4803018548</string>
+    <key>GADDelayAppMeasurementInit</key>
+    <true/>
     <key>LSMinimumSystemVersion</key>
     <string>12.0</string>
     <key>LSRequiresIPhoneOS</key>
@@ -71,6 +75,8 @@
     <array>
       <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
     </array>
+    <key>NSUserTrackingUsageDescription</key>
+    <string>This identifier will be used to deliver personalized ads to you.</string>
     <key>UIAppFonts</key>
     <array>
       <string>Nunito-Regular.ttf</string>
