--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
     "react-native-drawer-layout": "^4.1.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "1.11.0",
+    "react-native-google-mobile-ads": "^14.9.0",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "realm": "^20.1.0"
+    "realm": "^20.1.0",
+    "expo-tracking-transparency": "~5.1.1"
   },
   "devDependencies": {
     "@babel/core": "7.26.0",
