--- a/ios/Dearuniverse.xcodeproj/xcshareddata/xcschemes/Dearuniverse.xcscheme
+++ b/ios/Dearuniverse.xcodeproj/xcshareddata/xcschemes/Dearuniverse.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "Dearuniverse.app"
-               BlueprintName = "Dearuniverse"
-               ReferencedContainer = "container:Dearuniverse.xcodeproj">
+               BuildableName = "DearUniverse.app"
+               BlueprintName = "DearUniverse"
+               ReferencedContainer = "container:DearUniverse.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "DearuniverseTests.xctest"
-               BlueprintName = "DearuniverseTests"
-               ReferencedContainer = "container:Dearuniverse.xcodeproj">
+               BuildableName = "DearUniverseTests.xctest"
+               BlueprintName = "DearUniverseTests"
+               ReferencedContainer = "container:DearUniverse.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Dearuniverse.app"
-            BlueprintName = "Dearuniverse"
-            ReferencedContainer = "container:Dearuniverse.xcodeproj">
+            BuildableName = "DearUniverse.app"
+            BlueprintName = "DearUniverse"
+            ReferencedContainer = "container:DearUniverse.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Dearuniverse.app"
-            BlueprintName = "Dearuniverse"
-            ReferencedContainer = "container:Dearuniverse.xcodeproj">
+            BuildableName = "DearUniverse.app"
+            BlueprintName = "DearUniverse"
+            ReferencedContainer = "container:DearUniverse.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
