--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-webview": "13.12.5",
-    "realm": "^20.1.0"
+    "realm": "^20.1.0",
+    "expo-updates": "~0.26.18"
   },
   "devDependencies": {
     "@babel/core": "7.26.0",
